# Final_test_1

./: README.md  pyproject.toml
config/: settings.py  urls.py
electronics_network/: admin.py  models.py  paginations.py  serializer.py  tests.py  urls.py  views.py
electronics_network/migrations/: 0001_initial.py  0002_alter_entrepreneur_provider_dept_and_more.py  0003_entrepreneur_provider_entrepreneur_and_more.py  0004_alter_entrepreneur_provider_dept_and_more.py
users/: models.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
